# bento-alephium

./: .env.env  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  diesel.toml  docker-compose.yml  entrypoint.sh  rustfmt.toml
.github/workflows/: ci.yml
Docs/: client.rs.md  repository.md
migrations/2024-12-17-040318_create_blocks/: down.sql  up.sql
migrations/2024-12-17-063629_create_events/: down.sql  up.sql
migrations/2024-12-17-064322_create_transactions/: down.sql  up.sql
migrations/2024-12-18-083305_unique_constraint/: down.sql  up.sql
migrations/2025-02-05-093418_create_loan_action/: down.sql  up.sql
migrations/2025-02-06-065059_create_loan_detail/: down.sql  up.sql
migrations/2025-02-08-100028_create_processor_status/: down.sql  up.sql
migrations/2025-02-08-170758_update_blocks_parent_and_mainchain/: down.sql  up.sql
migrations/2025-02-19-081734_transaction_add_block_relation/: down.sql  up.sql
src/: client.rs  db.rs  indexer.rs  lib.rs  models.rs  repository.rs  schema.rs  types.rs  utils.rs  worker.rs  ws.rs
src/api/: error.rs  index.rs  mod.rs
src/api/handler/: block.rs  event.rs  mod.rs  transaction.rs
src/config/: db_config.rs  mod.rs
src/models/: block.rs  event.rs  mod.rs  processor_status.rs  transaction.rs
src/processors/: README.md  block_event_processor.rs  block_processor.rs  default_processor.rs  event_processor.rs  lending_marketplace_processor.rs  mod.rs  transaction_processor.rs
src/processors/default_processor/: default_extractor.rs  mod.rs
src/processors/examples/: mod.rs
src/processors/examples/lending/: lending_marketplace_processor.rs  mod.rs
src/repository/: block.rs  event.rs  mod.rs  transaction.rs
src/tests/: client.rs  crud.rs  db.rs  integration_test.rs  mod.rs  repository.rs
src/tests/integrations/: mock_block_and_events.json  mod.rs
src/utils/: time.rs
