[package]
edition = "2021"
name = "bento_alephium"
version = "0.1.0"

[dependencies]
diesel = { version = "2.1.4", features = [
    "postgres",
    "r2d2",
    "chrono",
    "numeric",
    "serde_json",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }

# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
anyhow = "1.0.94"
dotenvy = "0.15"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
bigdecimal = { version = "0.4.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
url = "2.5.4"
