[package]
edition = "2021"
name = "bento_alephium"
version = "0.1.0"

[[bin]]
name = "bento_alephium"
path = "src/bin/main.rs"

[dependencies]
diesel = {version = "2.1.4", features = [
  "postgres",
  "r2d2",
  "chrono",
  "numeric",
  "serde_json",
]}
diesel_migrations = {version = "2.1.0", features = ["postgres"]}

# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
anyhow = "1.0.94"
base64 = "0.22.1"
bigdecimal = {version = "0.4.1", features = ["serde"]}
chrono = {version = "0.4.31", features = ["serde"]}
dotenvy = "0.15"
futures = "0.3.31"
futures-util = {version = "0.3.31", default-features = false, features = ["sink", "std"]}
reqwest = {version = "0.12.9", features = ["json"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = {version = "1.0.134", features = ["raw_value"]}
tokio = {version = "1.42.0", features = ["full"]}
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
url = "2.5.4"
actix-web = "4.0.0"
